# bcaller

./: .gitmodules  README.md  call_variants.py  generate_training_data.py  refs.bib  report.tex  visualize_distributions.py
bcaller/: CMakeLists.txt  hdf5_to_window_frequencies.cpp  vcf_to_hdf5.cpp
testing/: mutate_fasta.pl
testing/chr1_test/: graph_probs.py
